--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -10,14 +10,16 @@
 body {
     background-color: #292929;
     color: #fff;
-
+    display: grid;
+    grid-template-columns: 60px 1fr;
 }
 
 header {
     display: flex;
-    justify-content: space-between;
-    padding: 20px;
+    justify-content: flex-end;
+    padding: 10px;
     box-shadow: 0 1px 2px rgba(235, 235, 235, 0.6);
+    margin-bottom: 20px;
 }
 
 header h1 {
@@ -115,11 +117,8 @@ button {
 }
 
 main {
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-content: center;
-    padding: 20px;
     height: 90vh;
+    grid-column: 2;
 }
 
 #data {
