--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -477,3 +477,59 @@ main {
         transform: translateY(0);
     }
 }
+
+
+/* Estilos do modal */
+.modal {
+    display: none;
+    /* Escondido por padrão */
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 50%;
+    max-width: max-content;
+    text-align: center;
+    position: relative;
+    color: #000;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.hidden {
+    display: none;
+}
+
+.modal-content ul li {
+    list-style: none;
+}
+
+li {
+    padding: 15px;
+}
+
+.modal-content button {
+    padding: 6px;
+    border-radius: 10px;
+    background-color: green;
+    color: white;
+    cursor: pointer;
+}
