--- a/Revisao/style.css
+++ b/Revisao/style.css
@@ -176,3 +176,61 @@ h2 {
 #xmark {
     background-color: #ec2727;
 }
+
+#historico_modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    grid-template-columns: 1fr;
+}
+
+.historico-container,
+.historico-add {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 600px;
+    width: 100%;
+    overflow-y: auto;
+    max-height: 80%;
+    margin: auto;
+}
+
+#historico_modal.complete {
+    grid-template-columns: 1fr 1fr;
+}
+
+.historico-card {
+    background: #f9f9f9;
+    padding: 15px;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.historico-item {
+    margin-bottom: 5px;
+}
+
+.historico-item strong {
+    color: #333;
+}
+
+.observacoes {
+    margin-left: 30px;
+}
+
+#add_obs i {
+    background-color: steelblue;
+    padding: 5px;
+    color: white;
+    border-radius: 50%;
+    font-size: 14px;
+}
