--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -787,6 +787,7 @@ span#obras_finalizadas {
     gap: 8px;
     flex: 0 0 95%;
 }
+
 .funcao_group {
     display: flex;
     flex-direction: column;
@@ -1299,4 +1300,77 @@ i.fa-info {
 
 .estrela.preenchida {
     color: gold;
+}
+
+
+.notificacao-sino {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+#icone-sino {
+    font-size: 50px;
+    color: #f39c12;
+    border-radius: 50%;
+    padding: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+#icone-sino:hover {
+    transform: scale(1.1);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
+
+.contador-tarefas {
+    position: absolute;
+    top: -8px;
+    right: -8px;
+    background-color: red;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 6px 8px;
+    border-radius: 50%;
+    border: 2px solid white;
+    min-width: 24px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s ease;
+}
+
+@keyframes balanco {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    25% {
+        transform: rotate(10deg);
+    }
+
+    50% {
+        transform: rotate(-10deg);
+    }
+
+    75% {
+        transform: rotate(5deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+/* Estilo do sino quando há uma notificação */
+.sino.ativado {
+    animation: balanco 0.5s ease infinite;
+    color: red;
+    /* Cor do sino quando ativado */
 }
