--- a/Revisao/style.css
+++ b/Revisao/style.css
@@ -234,3 +234,25 @@ h2 {
     border-radius: 50%;
     font-size: 14px;
 }
+
+#adicionar_obs button#submit {
+    background-color: green;
+    color: white;
+    padding: 2px 6px;
+    border-radius: 15px;
+    font-size: 14px;
+    margin: 10px 0 0;
+    cursor: pointer;
+}
+
+#adicionar_obs h3 {
+    margin-bottom: 5px;
+}
+
+#adicionar_obs p {
+    font-size: 12px;
+}
+
+#adicionar_obs span {
+    font-weight: bold;
+}
