Melhorias na tela de Revisão

--- a/Revisao/style.css
+++ b/Revisao/style.css
@@ -222,8 +222,8 @@ h2 {
     background: #fff;
     padding: 20px;
     border-radius: 10px;
-    max-width: 1200px;
-    width: 1200px;
+    max-width: 90vw;
+    width: 90vw;
     overflow-y: auto;
     max-height: 80%;
     margin: auto;
@@ -232,13 +232,11 @@ h2 {
 .historico-container {
     display: flex;
     flex-direction: column;
-    /* Coloca os elementos em uma coluna */
     gap: 20px;
-    /* Adiciona um espaço entre as seções */
 }
 
 #historico_modal.complete {
-    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
 .historico-card {
@@ -297,7 +295,7 @@ h2 {
 
 /* Ajuste a tabela */
 #tabelaHistorico {
-    width: 100%;
+    width: 100% !important;
     border-collapse: collapse;
 }
 
