--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -1259,6 +1259,8 @@ i.fa-info {
 
 .campo input {
     border: none;
+    border-left: 2px solid black;
+    padding-left: 10px;
 }
 
 .funcao_comp {
