--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -1048,3 +1048,30 @@ input[type="checkbox"] {
     color: red;
     /* Cor do sino quando ativado */
 }
+
+
+.filtro-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: space-between;
+}
+
+.filtro-item {
+    flex: 1 1 calc(33.33% - 15px);
+    min-width: 200px;
+}
+
+.filtro-item label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.filtro-item select,
+.filtro-item input {
+    width: 100%;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
