atualização na observação da obra

--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -1192,15 +1192,15 @@ i.fa-info {
 }
 
 
+#infos {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 /* Estilo geral para o container de informações */
 .info {
-    border: 1px solid #dcdcdc;
-    border-radius: 8px;
-    background-color: #f9f9f9;
-    margin: 10px 0;
-    padding: 15px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    display: block;
 }
 
 /* Efeito ao passar o mouse */
@@ -1394,3 +1394,15 @@ i.fa-info {
     font-size: 12px;
     transition: 0.3s all ease;
 }
+
+
+.autoInput {
+    border: 1px solid #dcdcdc;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    margin: 10px 0;
+    padding: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
