--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -1396,13 +1396,40 @@ i.fa-info {
 }
 
 
-.autoInput {
-    border: 1px solid #dcdcdc;
-    border-radius: 8px;
-    background-color: #f9f9f9;
-    margin: 10px 0;
-    padding: 15px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
+.input-container {
+    display: flex;
+    gap: 20px;
 }
 
+.hidden-text {
+    position: absolute;
+    visibility: hidden;
+    white-space: nowrap;
+    font: inherit;
+    padding: 0 2px;
+}
+
+.auto-width {
+    min-width: 10px;
+    max-width: 1200px;
+    padding: 4px;
+    font: inherit;
+    border: none;
+    outline: none;
+    color: white;
+    background: #808080;
+    font-size: 14px;
+    border-radius: 10px;
+    resize: none;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
+}
+
+.save-button {
+    border-radius: 50%;
+    background-color: white;
+    padding: 12px;
+    box-shadow: 0 4px 6px #808080;
+    cursor: pointer;
+}
