--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -1471,3 +1471,35 @@ i.fa-info {
     font-size: 12px;
     font-weight: bold;
 }
+
+
+#modal-content-meta {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 50%;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    animation: boom 0.5s ease-in-out;
+}
+
+@keyframes boom {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    50% {
+        transform: scale(1.2);
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
