feat: nova tela de aprovação de imagens internas

--- a/Revisao/style.css
+++ b/Revisao/style.css
@@ -25,10 +25,12 @@ a {
 }
 
 .hidden {
-    display: none;
+    display: none !important;
+
 }
 
-.main {
+.main,
+.container-aprovacao {
     display: flex;
     flex-direction: column;
     grid-column: 2;
@@ -351,15 +353,28 @@ h2 {
     transform: translate(-50%, -50%);
 }
 
+nav {
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    color: black;
+    max-height: 150px;
+    background: gainsboro;
+}
+
 .image {
-    width: 200px;
-    height: 200px;
-    border: 1px solid black;
+    width: 150px;
+    height: 150px;
     transition: 0.3s;
 }
 
 .image:hover {
     transform: scale(1.05);
+}
+
+.imagens {
+    display: grid;
+    grid-template-columns: 1fr 300px;
+    justify-content: center;
 }
 
 #imageContainer {
@@ -376,14 +391,21 @@ h2 {
     justify-content: center;
 }
 
+
 #imagem_completa {
     position: relative;
     display: inline-block;
-    margin-top: 20px;
+    margin: 20px auto;
+    width: 70%;
 }
 
-#imagem_completa img {
-    width: 100%;
+
+.sidebar-direita {
+    border-left: 1px solid black;
+}
+
+.sidebar-direita h3 {
+    text-align: center;
 }
 
 /* Estilo para o comentário */
@@ -426,4 +448,67 @@ h2 {
 
 .action-btn:hover {
     filter: brightness(0.8);
+}
+
+
+.comentarios {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+}
+
+.comment-card {
+    background-color: #333;
+    border-radius: 8px;
+    padding: 15px;
+    color: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    position: relative;
+}
+
+.comment-header {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 8px;
+}
+
+.comment-number {
+    background-color: #666;
+    color: white;
+    padding: 4px 8px;
+    border-radius: 50%;
+    font-weight: bold;
+}
+
+.comment-user {
+    font-weight: bold;
+}
+
+.comment-body {
+    margin-bottom: 8px;
+}
+
+.comment-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.comment-date {
+    font-size: 12px;
+    color: #888;
+}
+
+.comment-actions button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: white;
+    margin-left: 5px;
+}
+
+.comment-actions button:hover {
+    color: red;
 }
