feat: status secundário do HOLD, explicando o porque está.

--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -1397,26 +1397,45 @@ i.fa-info {
     cursor: pointer;
 }
 
-.tooltip {
+.tool {
     position: relative;
-    display: inline-block;
 }
 
-.tooltip:hover::after {
+.tool::after {
     content: attr(data-tooltip);
+    /* Pega o texto do atributo */
     position: absolute;
-    bottom: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 12px;
+    white-space: nowrap;
+    bottom: 120%;
+    /* Posiciona acima da célula */
     left: 50%;
     transform: translateX(-50%);
-    padding: 5px;
-    background-color: #333;
-    color: #fff;
-    border-radius: 4px;
-    white-space: nowrap;
-    font-size: 12px;
-    transition: 0.3s all ease;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.2s ease-in-out;
 }
 
+.tool:hover::after {
+    opacity: 1;
+    visibility: visible;
+}
+
+.tooltip-box {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 12px;
+    white-space: nowrap;
+    display: none;
+    z-index: 1000;
+}
 
 .input-container {
     display: flex;
