--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -1640,3 +1640,8 @@ form#formArquivos {
     gap: 15px;
     margin-top: 20px;
 }
+
+
+.image-item .titulo_imagem {
+    border-bottom: 1px solid;
+}
