fix: arrumado o css da coluna de prazo na tabela obra

--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -698,6 +698,10 @@ table#tabela-obra th:first-child {
     resize: horizontal;
 }
 
+table#tabela-obra tbody td:nth-child(3) {
+    font-size: 13px;
+}
+
 
 td {
     overflow: hidden;
