--- a/TelaGerencial/style.css
+++ b/TelaGerencial/style.css
@@ -25,7 +25,6 @@ header {
 }
 
 h2 {
-    margin-top: 40px;
     margin-bottom: 10px;
     color: #333;
 }
@@ -38,7 +37,7 @@ label {
 select {
     padding: 4px 8px;
     font-size: 14px;
-    margin-bottom: 20px;
+    margin: 20px 0;
 }
 
 table {
